--- a/index.html
+++ b/index.html
@@ -5,33 +5,133 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clothing Store</title>
-  <link rel="stylesheet" href="src/style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <title>Demo Store</title>
+  <link href="./dist/output.css" rel="stylesheet">
 </head>
 
 <body>
-  <div class="navbar">
-    <a href="index.html">
-      <h2>Clothing Store</h2>
-    </a>
-
-    <a href="cart.html">
-      <div class="cart">
-        <i class="bi bi-cart2"></i>
-        <div id="cartAmount" class="cartAmount">0</div>
+  <header class="relative">
+    <nav>
+      <!-- Secondary navigation -->
+      <div class="bg-white shadow-sm">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+          <div class="flex h-16 items-center justify-between">
+            <!-- Logo (lg+) -->
+            <div class="hidden lg:flex lg:flex-1 lg:items-center">
+              <a href="#">
+                Convert Wares
+                <span class="sr-only">Convert Wares</span>
+              </a>
+            </div>
+            <div class="hidden h-full lg:flex">
+              <!-- Logo (lg-) -->
+              <a href="#" class="lg:hidden">
+                Convert Wares
+                <span class="sr-only">Convert Wares</span>
+              </a>
+              <div class="flex flex-1 items-center justify-end">
+              <!-- Cart -->
+              <div class="ml-4 flow-root lg:ml-8">
+                <a href="#" class="group -m-2 flex items-center p-2">
+                  <svg class="h-6 w-6 flex-shrink-0 text-gray-400 group-hover:text-gray-500" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+                  </svg>
+                  <span class="ml-2 text-sm font-medium text-gray-700 group-hover:text-gray-800">0</span>
+                  <span class="sr-only">items in cart, view bag</span>
+                </a>
+              </div>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div> 
+    </nav>
+  </header>
+  <div class="bg-white">
+    <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+      <div class="mt-8 grid grid-cols-1 gap-y-12 sm:grid-cols-2 sm:gap-x-6 lg:grid-cols-4 xl:gap-x-8">
+        <div>
+          <div class="relative">
+            <div class="relative h-72 w-full overflow-hidden rounded-lg">
+              <img src="https://tailwindui.com/img/ecommerce-images/product-page-03-related-product-01.jpg" alt="Front of zip tote bag with white canvas, black canvas straps and handle, and black zipper pulls." class="h-full w-full object-cover object-center">
+            </div>
+            <div class="relative mt-4">
+              <h3 class="text-sm font-medium text-gray-900">Zip Tote Basket</h3>
+              <p class="mt-1 text-sm text-gray-500">White and black</p>
+            </div>
+            <div class="absolute inset-x-0 top-0 flex h-72 items-end justify-end overflow-hidden rounded-lg p-4">
+              <div aria-hidden="true" class="absolute inset-x-0 bottom-0 h-36 bg-gradient-to-t from-black opacity-50"></div>
+              <p class="relative text-lg font-semibold text-white">$140</p>
+            </div>
+          </div>
+          <div class="mt-6">
+            <a href="#" class="relative flex items-center justify-center rounded-md border border-transparent bg-gray-100 px-8 py-2 text-sm font-medium text-gray-900 hover:bg-gray-200">Add to bag<span class="sr-only">, Zip Tote Basket</span></a>
+          </div>
+        </div>
+  
+        <!-- More products... -->
+        <div>
+          <div class="relative">
+            <div class="relative h-72 w-full overflow-hidden rounded-lg">
+              <img src="https://tailwindui.com/img/ecommerce-images/product-page-03-related-product-01.jpg" alt="Front of zip tote bag with white canvas, black canvas straps and handle, and black zipper pulls." class="h-full w-full object-cover object-center">
+            </div>
+            <div class="relative mt-4">
+              <h3 class="text-sm font-medium text-gray-900">Zip Tote Basket</h3>
+              <p class="mt-1 text-sm text-gray-500">White and black</p>
+            </div>
+            <div class="absolute inset-x-0 top-0 flex h-72 items-end justify-end overflow-hidden rounded-lg p-4">
+              <div aria-hidden="true" class="absolute inset-x-0 bottom-0 h-36 bg-gradient-to-t from-black opacity-50"></div>
+              <p class="relative text-lg font-semibold text-white">$140</p>
+            </div>
+          </div>
+          <div class="mt-6">
+            <a href="#" class="relative flex items-center justify-center rounded-md border border-transparent bg-gray-100 px-8 py-2 text-sm font-medium text-gray-900 hover:bg-gray-200">Add to bag<span class="sr-only">, Zip Tote Basket</span></a>
+          </div>
+        </div>
+        <!-- More products... -->
+        <div>
+          <div class="relative">
+            <div class="relative h-72 w-full overflow-hidden rounded-lg">
+              <img src="https://tailwindui.com/img/ecommerce-images/product-page-03-related-product-01.jpg" alt="Front of zip tote bag with white canvas, black canvas straps and handle, and black zipper pulls." class="h-full w-full object-cover object-center">
+            </div>
+            <div class="relative mt-4">
+              <h3 class="text-sm font-medium text-gray-900">Zip Tote Basket</h3>
+              <p class="mt-1 text-sm text-gray-500">White and black</p>
+            </div>
+            <div class="absolute inset-x-0 top-0 flex h-72 items-end justify-end overflow-hidden rounded-lg p-4">
+              <div aria-hidden="true" class="absolute inset-x-0 bottom-0 h-36 bg-gradient-to-t from-black opacity-50"></div>
+              <p class="relative text-lg font-semibold text-white">$140</p>
+            </div>
+          </div>
+          <div class="mt-6">
+            <a href="#" class="relative flex items-center justify-center rounded-md border border-transparent bg-gray-100 px-8 py-2 text-sm font-medium text-gray-900 hover:bg-gray-200">Add to bag<span class="sr-only">, Zip Tote Basket</span></a>
+          </div>
+        </div>
+        <!-- More products... -->
+        <div>
+          <div class="relative">
+            <div class="relative h-72 w-full overflow-hidden rounded-lg">
+              <img src="https://tailwindui.com/img/ecommerce-images/product-page-03-related-product-01.jpg" alt="Front of zip tote bag with white canvas, black canvas straps and handle, and black zipper pulls." class="h-full w-full object-cover object-center">
+            </div>
+            <div class="relative mt-4">
+              <h3 class="text-sm font-medium text-gray-900">Zip Tote Basket</h3>
+              <p class="mt-1 text-sm text-gray-500">White and black</p>
+            </div>
+            <div class="absolute inset-x-0 top-0 flex h-72 items-end justify-end overflow-hidden rounded-lg p-4">
+              <div aria-hidden="true" class="absolute inset-x-0 bottom-0 h-36 bg-gradient-to-t from-black opacity-50"></div>
+              <p class="relative text-lg font-semibold text-white">$140</p>
+            </div>
+          </div>
+          <div class="mt-6">
+            <a href="#" class="relative flex items-center justify-center rounded-md border border-transparent bg-gray-100 px-8 py-2 text-sm font-medium text-gray-900 hover:bg-gray-200">Add to bag<span class="sr-only">, Zip Tote Basket</span></a>
+          </div>
+        </div>
+        
       </div>
-    </a>
-
+    </div>
   </div>
-
-  <div class="shop" id="shop">
-
-
-  </div>
-
+  
 </body>
-<script src="src/Data.js"></script>
-<script src="src/main.js"></script>
 
+<script src="src/app.js"></script>
 </html>
