--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
                   </div>
                   <p class="mt-0.5 text-sm text-gray-500">Shipping and taxes calculated at checkout.</p>
                   <div class="mt-6">
-                    <a href="#" class="flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-6 py-3 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Checkout</a>
+                    <a href="https://www.youtube.com/watch?v=MMnAg6MdlHg" class="flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-6 py-3 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Checkout</a>
                   </div>
                   <div class="mt-6 flex justify-center text-center text-sm text-gray-500">
                     <p>
                       or
-                      <button type="button" class="font-medium text-indigo-600 hover:text-indigo-500">
+                      <button onclick="closeModal()"type="button" class="font-medium text-indigo-600 hover:text-indigo-500">
                         Continue Shopping
                         <span aria-hidden="true"> &rarr;</span>
                       </button>
