--- a/index.html
+++ b/index.html
@@ -23,13 +23,7 @@
                 <span class="sr-only">Convert Wares</span>
               </a>
             </div>
-            <div class="hidden h-full lg:flex">
-              <!-- Logo (lg-) -->
-              <a href="#" class="lg:hidden">
-                Convert Wares
-                <span class="sr-only">Convert Wares</span>
-              </a>
-              <div class="flex flex-1 items-center justify-end">
+            <div class="h-full contents">
               <!-- Cart -->
               <div onclick="openModal()" class="ml-4 flow-root lg:ml-8">
                 <div class="group -m-2 flex items-center p-2">
@@ -40,7 +34,6 @@
                   <span class="sr-only">items in cart, view bag</span>
                 </div>
               </div>
-            </div>
           </div>
           </div>
         </div>
